--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,7 +14,7 @@ jobs:
           python-version: "3.10"
       - run: sudo apt-get update && sudo apt-get install -y gcc curl
       - run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python3 -
-      - run: poetry install -E all
+      - run: poetry install
       - run: poetry run flake8 ./sqlaurum
       - run: poetry run black --check ./sqlaurum
       - run: poetry run mypy ./sqlaurum
@@ -36,5 +36,5 @@ jobs:
           python-version: ${{ matrix.python }}
       - run: sudo apt-get update && sudo apt-get install -y gcc curl
       - run: curl -sSL https://install.python-poetry.org | python3
-      - run: poetry install -E all
+      - run: poetry install
       - run: poetry run pytest --cov=./sqlaurum --cov-report=xml -v ./tests
