--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ alembic = "^1.10.2"
 asyncpg = "^0.27.0"
 aiosqlite = "^0.18.0"
 sqlalchemy = "^2.0.8"
+orjson = "^3.8.9"
+pydantic = "^1.10.7"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
@@ -26,6 +28,7 @@ tox = "^3.25.0"
 bandit = "^1.7.4"
 python-semantic-release = "^7.33.2"
 greenlet = "^2.0.2"
+fastapi = "^0.95.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
