--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,6 @@ skip_missing_interpreters =
 whitelist_externals = poetry
 commands =
     poetry install -v -E all
-    poetry run flake8 ./sqlaurum
-    poetry run mypy ./sqlaurum
+    poetry run flake8 ./sqlargon
+    poetry run mypy ./sqlargon
     poetry run pytest ./tests
