--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,9 +15,9 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y gcc curl
       - run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python3 -
       - run: poetry install
-      - run: poetry run flake8 ./sqlaurum
-      - run: poetry run black --check ./sqlaurum
-      - run: poetry run mypy ./sqlaurum
+      - run: poetry run flake8 ./sqlargon
+      - run: poetry run black --check ./sqlargon
+      - run: poetry run mypy ./sqlargon
 
   build-unix:
     timeout-minutes: 30
@@ -37,4 +37,4 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y gcc curl
       - run: curl -sSL https://install.python-poetry.org | python3
       - run: poetry install
-      - run: poetry run pytest --cov=./sqlaurum --cov-report=xml -v ./tests
+      - run: poetry run pytest --cov=./sqlargon --cov-report=xml -v ./tests
