--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,19 +1,16 @@
-name: CI
-on:
-  pull_request:
-    types: [opened, reopened]
-  push:
+name: Test
+on: [push, pull_request]
 jobs:
   lint:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     name: lint
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: sudo apt-get update && sudo apt-get install -y gcc curl
-      - run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python3 -
+      - run: sudo apt-get update && sudo apt-get install -y curl
+      - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run flake8 ./sqlargon
       - run: poetry run black --check ./sqlargon
@@ -23,7 +20,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        os: ["ubuntu-22.04"]
+        os: ["ubuntu-20.04"]
         python: ["3.8", "3.9", "3.10", "3.11"]
 
     runs-on: ${{ matrix.os }}
@@ -35,6 +32,9 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - run: sudo apt-get update && sudo apt-get install -y gcc curl
-      - run: curl -sSL https://install.python-poetry.org | python3
+      - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run pytest --cov=./sqlargon --cov-report=xml -v ./tests
+#      - name: upload codecov
+#        if: matrix.python == 3.9
+#        run: bash <(curl -s https://codecov.io/bash)
