--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ authors = [
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 alembic = "^1.10.2"
-asyncpg = "^0.27.0"
+asyncpg = "^0.28.0"
 aiosqlite = "^0.19.0"
 sqlalchemy = "^2.0.8"
-pydantic = ">=1.0"
+pydantic = ">=1.0,<2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
@@ -29,6 +29,7 @@ greenlet = "^2.0.2"
 fastapi = "^0.95.0"
 orjson = "^3.8.14"
 mypy = "^1.4.1"
+opentelemetry-instrumentation-sqlalchemy = "^0.40b0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
