--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,9 +32,9 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - run: sudo apt-get update && sudo apt-get install -y gcc curl make
-#      - run: curl -sSL "https://www.sqlite.org/2023/sqlite-autoconf-3410100.tar.gz" > "sqlite-autoconf-3410100.tar.gz" && tar xzf sqlite-autoconf-3410100.tar.gz \
-#            && cd sqlite-autoconf-3410100 && ./configure --prefix=/usr --disable-static --enable-fts5 --enable-json1 CFLAGS="-g -O2 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_FTS4=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_JSON1" \
-#            && make && make install
+      - run: curl -sSL "https://www.sqlite.org/2023/sqlite-autoconf-3410100.tar.gz" > "sqlite-autoconf-3410100.tar.gz" && tar xzf sqlite-autoconf-3410100.tar.gz \
+            && cd sqlite-autoconf-3410100 && ./configure --prefix=/usr --disable-static --enable-fts5 --enable-json1 CFLAGS="-g -O2 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_FTS4=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_JSON1" \
+            && make && make install
       - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run pytest --cov=./sqlargon --cov-report=xml -v ./tests
