--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [tox]
 skipsdist = true
-envlist = py38,py39,py310,py311
+envlist = py38,py39,py310,py311,312
 skip_missing_interpreters =
     true
 
 [testenv]
 whitelist_externals = poetry
 commands =
-    poetry install
-    poetry run flake8 ./sqlargon
-    poetry run mypy ./sqlargon
+    poetry install --all-extras
     poetry run pytest ./tests
