--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,14 @@
 repos:
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.1.0
+    hooks:
+      - id: pyupgrade
+        args: ["--py39-plus"]
+
+  - repo: https://github.com/asottile/yesqa
+    rev: v1.2.3
+    hooks:
+      - id: yesqa
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
@@ -8,49 +18,29 @@ repos:
       - id: check-toml
       - id: check-yaml
         args: [--allow-multiple-documents]
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.7.0
-    hooks:
-    -   id: pyupgrade
-        args:
-        - --py3-plus
-        - --keep-runtime-typing
-
-  - repo: https://github.com/asottile/yesqa
-    rev: v1.2.3
-    hooks:
-      - id: yesqa
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.11.5
-    hooks:
-      - id: isort
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.264'
+    rev: 'v0.1.13'
     hooks:
       - id: ruff
         args: ["--fix"]
-
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-      - id: black
-        args: ["--line-length", "88"]
+      - id: ruff-format
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.4
     hooks:
     - id: bandit
-      args: ["--skip", "B101", "-r", "./sqlargon"]
+      args: ["--skip", "B101"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.4.1
+    rev: v1.2.0
     hooks:
       - id: mypy
+
+  - repo: https://github.com/fpgmaas/deptry.git
+    rev: 0.12.0
+    hooks:
+      - id: deptry
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.4.0
