--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sqlargon"
-version = "0.2.8"
+version = "1.0.0-beta.1"
 description = "SQLAlchemy utils for Postgres and Sqlite"
 readme = "README.md"
 authors = [
@@ -9,74 +9,104 @@ authors = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
-alembic = "^1.10.2"
-asyncpg = "^0.28.0"
+alembic = "^1.13.1"
+asyncpg = "^0.29.0"
 aiosqlite = "^0.19.0"
-sqlalchemy = "^2.0.8"
+sqlalchemy = ">2.0,<3"
+pydantic = ">=2.0,<3"
+pydantic-settings = "^2.1.0"
+orjson = {version = "*", optional = true}
+opentelemetry-instrumentation-sqlalchemy = {version = "*", optional = true}
+
+[tool.poetry.extras]
+all = ["orjson", "opentelemetry-instrumentation-sqlalchemy"]
+orjson = ["orjson"]
+open-telemetry = ["opentelemetry-instrumentation-sqlalchemy"]
 
 [tool.poetry.group.dev.dependencies]
+ruff = "==0.1.13"
+mypy = "^1.2.0"
+deptry = "^0.12.0"
+bandit = "^1.7.4"
+python-semantic-release = "^7.33.2"
+greenlet = {version = "^3.0.3", platform = "arm64"}
+
+[tool.poetry.group.test.dependencies]
 pytest = "^7.2.1"
 pytest-asyncio = "^0.20.2"
 pytest-cov = "^4.0.0"
-flake8 = "^6.0.0"
-black = "^22.3.0"
-isort = "^5.10.1"
-tox = "^3.25.0"
-bandit = "^1.7.4"
-python-semantic-release = "^7.33.2"
-greenlet = "^2.0.2"
-fastapi = "^0.95.0"
-orjson = "^3.8.14"
-mypy = "^1.4.1"
-opentelemetry-instrumentation-sqlalchemy = "^0.40b0"
+pytest-sugar = "^0.9.7"
+pytest-repeat = "^0.9.3"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
 mkdocs-material = "^8.2.1"
 mkdocs-autorefs = "^0.4.1"
-mkdocs-gen-files = "^0.4.0"
-mkdocstrings-python = "^0.8.2"
+mkdocs-gen-files = ">=0.4,<0.6"
+mkdocstrings = {version = ">=0.18", extras = ["python"]}
+
 
 [tool.pytest.ini_options]
-addopts = "--cov=./sqlargon"
+addopts = "--cov=./sqlargon --count=3"
 testpaths = [
    "./tests"
 ]
 asyncio_mode = "auto"
 
-[tool.bandit]
-skips = ['B101']
-
-[tool.isort]
-profile = "black"
-
 [tool.mypy]
+python_version = "3.9"
 namespace_packages = true
 ignore_missing_imports = true
 no_site_packages = true
 
-[tool.ruff]
-select = [
-    "B",  # flake8-bugbear
-    "C",  # flake8-comprehensions
-    "E",  # pycodestyle errors
-    "F",  # pyflakes
-    "W",  # pycodestyle warnings
-#    "I",  # isort
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if TYPE_CHECKING:",
+    "raise NotImplementedError"
 ]
 
-ignore = [
-    "E501",  # line too long, handled by black
-    "B008",  # do not perform function calls in argument defaults
-]
+[tool.ruff]
+target-version = "py39"
 
 line-length = 88
-# comment this line if you have imported tasks/models unused
+indent-width = 4
 
-#unfixable = ["F401"]
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "C",  # flake8-comprehensions
+    "B",  # flake8-bugbear
+    "UP", # pyupgrade
+    "SIM", # flake8-simplify
+]
+ignore = [
+    "B008",  # do not perform function calls in argument defaults
+    "E501", # line too long
+]
+fixable = ["ALL"]
+unfixable = []
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+docstring-code-format = true
+docstring-code-line-length = "dynamic"
+line-ending = "auto"
 
 [tool.ruff.mccabe]
-max-complexity = 10
+max-complexity = 8
+
+[tool.deptry.per_rule_ignores]
+DEP001 = ["fastapi"]
+DEP002 = ["alembic", "asyncpg", "aiosqlite"]
+DEP003 = ["sqlargon", "typing_extensions", "pydantic_core", "fastapi"]
+
 
 [tool.semantic_release]
 version_variable = [
