--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Test
 on: [push, pull_request]
 jobs:
   lint:
-    runs-on: ["ubuntu-22.04"]
+    runs-on: ["ubuntu-latest"]
     name: lint
     steps:
       - uses: actions/checkout@master
@@ -23,7 +23,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        os: ["ubuntu-22.04"]
+        os: ["ubuntu-latest"]
         python: ["3.9", "3.10", "3.11", "3.12"]
 
     runs-on: ${{ matrix.os }}
