--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Radzim Kowalow <rarha_eu@protonmail.com>"]
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 alembic = "^1.13.1"
-asyncpg = "^0.29.0"
+asyncpg = "<1.0"
 aiosqlite = "^0.19.0"
 sqlalchemy = ">2.0,<3"
 pydantic = ">=2.0,<3"
